change content of achieverment

--- a/style_achieverment.css
+++ b/style_achieverment.css
@@ -141,6 +141,7 @@ body {
     width: 100%; /* Chiếm toàn bộ chiều rộng */
     max-width: none; /* Bỏ giới hạn chiều rộng tối đa */
     margin: 0; /* Đảm bảo không có margin bên ngoài */
+    j
   }
 
   .sidebar {
